ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.gotify.local.antanihomelab.com`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
    - match: Host(`gotify.local.antanihomelab.com`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-antanihomelab-tls # change to your cert
